add css and beta-form

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Guestbook</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="#">
+	<link rel="stylesheet" href="css/css.css">
 	<link href="http://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" type="text/css">
 
  		<!--[if lt IE 9]>
@@ -13,6 +13,38 @@
 
 </head>
 <body>
-	<h1>Guestbook</h1>
+	<h1 class="h1">Guestbook</h1>
+	<form name="auth" action="#" method="post">
+		<table class="table-form" border="1">
+			<tr>
+				<td>User Name:</td>
+				<td><input maxlength="25" size="58" type="text" name="user" required></td>
+			</tr>
+			<tr>
+				<td>E-mail:</td>
+				<td><input type="email" size="58" name="email" required></td>
+			</tr>
+			<tr>
+				<td>Homepage:</td>
+				<td><input type="url" size="58" name="homepage"></td>
+			</tr>
+			<tr>
+				<td>CAPTCHA:</td>
+				<td></td>
+			</tr>
+			<tr>
+				<td></td>
+				<td><input type="text" size="58" name="captcha" required></td>
+			</tr>
+			<tr>
+				<td>Text:</td>
+				<td><textarea rows="10" cols="45" name="text" required>Писать сюда</textarea></td>
+			</tr>
+			<tr>
+				<td><input type="submit" value="Отправить"></td>
+				<td><input type="reset" value="Очистить"></td>
+			</tr>
+		</table>
+	</form>
 </body>
 </html>
